--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,6 +18,8 @@
   <properties>
     <java.version>17</java.version>
     <jjwt.version>0.11.5</jjwt.version>
+    <hibernate.version>6.4.4.Final</hibernate.version>
+    <jts.version>1.19.0</jts.version>
   </properties>
 
   <dependencies>
@@ -50,10 +52,12 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-spatial</artifactId>
+      <version>${hibernate.version}</version>
     </dependency>
     <dependency>
       <groupId>org.locationtech.jts</groupId>
       <artifactId>jts-core</artifactId>
+      <version>${jts.version}</version>
     </dependency>
 
     <dependency>
