Fix deploy sed to update image lines

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -178,32 +178,7 @@ jobs:
           docker network inspect web >/dev/null 2>&1 || docker network create web
 
           if [ ! -f /opt/caddy/docker-compose.yml ]; then
-            sudo python - <<'PY'
-content = """version: '3.8'
-
-services:
-  caddy:
-    image: caddy:2-alpine
-    container_name: caddy
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-      - "443:443/udp"
-    volumes:
-      - /opt/caddy/config:/etc/caddy
-      - /opt/caddy/data:/data
-      - /opt/brooks/infra/caddy/Caddyfile:/etc/caddy/Caddyfile:ro
-    networks:
-      - web
-
-networks:
-  web:
-    external: true
-"""
-with open("/opt/caddy/docker-compose.yml", "w", encoding="utf-8") as f:
-    f.write(content)
-PY
+            sudo bash -c 'printf "%s\n" "version: \"3.8\"" "" "services:" "  caddy:" "    image: caddy:2-alpine" "    container_name: caddy" "    restart: unless-stopped" "    ports:" "      - \"80:80\"" "      - \"443:443\"" "      - \"443:443/udp\"" "    volumes:" "      - /opt/caddy/config:/etc/caddy" "      - /opt/caddy/data:/data" "      - /opt/brooks/infra/caddy/Caddyfile:/etc/caddy/Caddyfile:ro" "    networks:" "      - web" "" "networks:" "  web:" "    external: true" > /opt/caddy/docker-compose.yml'
           fi
 
           sudo docker compose -f /opt/caddy/docker-compose.yml up -d
