--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ DATABASE_PASSWORD=CHANGE_ME_STRONG_PASSWORD_HERE
 # JWT Configuration
 # ==========================================
 # Generate with: openssl rand -base64 32
+BROOKS_JWT_SECRET=CHANGE_ME_LONG_RANDOM_STRING_AT_LEAST_32_CHARACTERS
+# Legacy monolith (docker-compose.yml) uses JWT_SECRET
 JWT_SECRET=CHANGE_ME_LONG_RANDOM_STRING_AT_LEAST_32_CHARACTERS
 
 # ==========================================
@@ -49,6 +51,14 @@ VITE_GOOGLE_MAPS_KEY=
 
 # Nominatim URL for geocoding (OpenStreetMap)
 VITE_NOMINATIM_URL=https://nominatim.openstreetmap.org
+
+# ==========================================
+# Internal Service-to-Service Auth
+# ==========================================
+INTERNAL_SERVICE_KEY=CHANGE_ME_INTERNAL_KEY
+INTERNAL_SERVICE_KEYS=CHANGE_ME_INTERNAL_KEY
+INTERNAL_SERVICE_ALLOWED_NAMES=pins-service
+INTERNAL_SERVICE_KEY_MAP=pins-service=CHANGE_ME_INTERNAL_KEY
 
 # ==========================================
 # Notes
