--- a/infra/caddy/Caddyfile
+++ b/infra/caddy/Caddyfile
@@ -1,4 +1,4 @@
-# Brooks App - Main Domain with HTTPS
+# Brooks App - Main Domain with HTTPS (Microservices)
 brooksweb.uk, www.brooksweb.uk {
   log {
     output stdout
@@ -9,30 +9,71 @@ brooksweb.uk, www.brooksweb.uk {
   # Enable gzip and zstd compression
   encode gzip zstd
 
-  # API routes -> Backend (Spring Boot on port 8080)
-  handle /api/* {
-    reverse_proxy brooks-backend:8080 {
-      # Health check
-      health_uri /actuator/health
-      health_interval 30s
-      health_timeout 10s
-
-      # Timeouts
-      transport http {
-        dial_timeout 10s
-        response_header_timeout 30s
-      }
-    }
+  # API routes -> Microservices
+  handle /api/auth/actuator/health {
+    reverse_proxy auth-service:8081
   }
 
-  # Management/Actuator endpoints -> Backend
+  handle /api/social/actuator/health {
+    reverse_proxy social-service:8082
+  }
+
+  handle /api/lists/actuator/health {
+    reverse_proxy lists-service:8083
+  }
+
+  handle /api/pins/actuator/health {
+    reverse_proxy pins-service:8084
+  }
+
+  handle /api/media/actuator/health {
+    reverse_proxy media-service:8085
+  }
+
+  handle /api/moderation/actuator/health {
+    reverse_proxy moderation-service:8086
+  }
+
+  handle /api/notifications/actuator/health {
+    reverse_proxy notifications-service:8087
+  }
+
+  handle_path /api/auth/* {
+    reverse_proxy auth-service:8081
+  }
+
+  handle_path /api/social/* {
+    reverse_proxy social-service:8082
+  }
+
+  handle_path /api/lists/* {
+    reverse_proxy lists-service:8083
+  }
+
+  handle_path /api/pins/* {
+    reverse_proxy pins-service:8084
+  }
+
+  handle_path /api/media/* {
+    reverse_proxy media-service:8085
+  }
+
+  handle_path /api/moderation/* {
+    reverse_proxy moderation-service:8086
+  }
+
+  handle_path /api/notifications/* {
+    reverse_proxy notifications-service:8087
+  }
+
+  # Management/Actuator endpoints -> Pins service (primary)
   handle /actuator/* {
-    reverse_proxy brooks-backend:8080
+    reverse_proxy pins-service:8084
   }
 
   # All other routes -> Frontend (React app on port 3000)
   handle {
-    reverse_proxy brooks-frontend:3000 {
+    reverse_proxy frontend:3000 {
       # Health check
       health_uri /health
       health_interval 30s
