--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       BROOKS_JWT_ACCESS_TTL: 900
       BROOKS_JWT_REFRESH_TTL: 2592000
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS:-http://localhost:3000}
+      INTERNAL_SERVICE_KEYS: ${INTERNAL_SERVICE_KEYS:-pins-service-key-change-in-production}
+      INTERNAL_SERVICE_ALLOWED_NAMES: ${INTERNAL_SERVICE_ALLOWED_NAMES:-pins-service}
+      INTERNAL_SERVICE_KEY_MAP: ${INTERNAL_SERVICE_KEY_MAP:-pins-service=pins-service-key-change-in-production}
     depends_on:
       - postgres
     ports:
@@ -50,6 +53,9 @@ services:
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS:-http://localhost:3000}
+      INTERNAL_SERVICE_KEYS: ${INTERNAL_SERVICE_KEYS:-pins-service-key-change-in-production}
+      INTERNAL_SERVICE_ALLOWED_NAMES: ${INTERNAL_SERVICE_ALLOWED_NAMES:-pins-service}
+      INTERNAL_SERVICE_KEY_MAP: ${INTERNAL_SERVICE_KEY_MAP:-pins-service=pins-service-key-change-in-production}
     depends_on:
       - postgres
     ports:
@@ -68,6 +74,9 @@ services:
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS:-http://localhost:3000}
+      INTERNAL_SERVICE_KEYS: ${INTERNAL_SERVICE_KEYS:-pins-service-key-change-in-production,social-service-key-change-in-production}
+      INTERNAL_SERVICE_ALLOWED_NAMES: ${INTERNAL_SERVICE_ALLOWED_NAMES:-pins-service,social-service}
+      INTERNAL_SERVICE_KEY_MAP: ${INTERNAL_SERVICE_KEY_MAP:-pins-service=pins-service-key-change-in-production,social-service=social-service-key-change-in-production}
     depends_on:
       - postgres
     ports:
@@ -88,6 +97,8 @@ services:
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS:-http://localhost:3000}
+      INTERNAL_SERVICE_KEY: ${INTERNAL_SERVICE_KEY:-pins-service-key-change-in-production}
+      INTERNAL_SERVICE_NAME: ${INTERNAL_SERVICE_NAME:-pins-service}
     depends_on:
       - postgres
       - social-service
@@ -104,7 +115,7 @@ services:
     environment:
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
-      BROOKS_WEB_ORIGINS: http://localhost:3000
+      BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS:-http://localhost:3000}
     ports:
       - "8085:8085"
 
@@ -135,25 +146,25 @@ services:
     environment:
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
-      BROOKS_WEB_ORIGINS: http://localhost:3000
+      BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS:-http://localhost:3000}
     ports:
       - "8087:8087"
 
   frontend:
     build:
-      context: ..
-      dockerfile: web/Dockerfile
+      context: ../web
+      dockerfile: Dockerfile
       args:
         VITE_AUTH0_DOMAIN: ${VITE_AUTH0_DOMAIN}
         VITE_AUTH0_CLIENT_ID: ${VITE_AUTH0_CLIENT_ID}
         VITE_AUTH0_AUDIENCE: ${VITE_AUTH0_AUDIENCE}
         VITE_AUTH0_REDIRECT_URI: ${VITE_AUTH0_REDIRECT_URI:-}
-        VITE_SOCIAL_API_URL: http://localhost:8082
-        VITE_LISTS_API_URL: http://localhost:8083
-        VITE_PINS_API_URL: http://localhost:8084
-        VITE_MEDIA_API_URL: http://localhost:8085
-        VITE_MODERATION_API_URL: http://localhost:8086
-        VITE_NOTIFICATIONS_API_URL: http://localhost:8087
+        VITE_SOCIAL_API_URL: ${VITE_SOCIAL_API_URL:-http://localhost:8082}
+        VITE_LISTS_API_URL: ${VITE_LISTS_API_URL:-http://localhost:8083}
+        VITE_PINS_API_URL: ${VITE_PINS_API_URL:-http://localhost:8084}
+        VITE_MEDIA_API_URL: ${VITE_MEDIA_API_URL:-http://localhost:8085}
+        VITE_MODERATION_API_URL: ${VITE_MODERATION_API_URL:-http://localhost:8086}
+        VITE_NOTIFICATIONS_API_URL: ${VITE_NOTIFICATIONS_API_URL:-http://localhost:8087}
         VITE_MAP_PROVIDER: leaflet
         VITE_GOOGLE_MAPS_KEY: ${VITE_GOOGLE_MAPS_KEY:-}
         VITE_NOMINATIM_URL: https://nominatim.openstreetmap.org/reverse
