--- a/services/lists-service/src/main/resources/application.yml
+++ b/services/lists-service/src/main/resources/application.yml
@@ -27,3 +27,5 @@ management:
 internal:
   service:
     keys: ${INTERNAL_SERVICE_KEYS:pins-service-key-change-in-production,social-service-key-change-in-production}
+    allowed-names: ${INTERNAL_SERVICE_ALLOWED_NAMES:pins-service,social-service}
+    key-map: ${INTERNAL_SERVICE_KEY_MAP:pins-service=pins-service-key-change-in-production,social-service=social-service-key-change-in-production}
